Added Encode Details window. Exposes elapsed time, ETA, current and average FPS, running file size, current pass and pass progress. Fixed crash in the preview window when a source file is deleted after scanning.
--HG--
branch : beta

--- a/VidCoder/View/MainWindow.xaml
+++ b/VidCoder/View/MainWindow.xaml
@@ -369,6 +369,10 @@
 					Command="{Binding WindowManagerVM.OpenLogWindowCommand}"
 					IsCheckable="True" IsChecked="{Binding WindowManagerVM.LogWindowOpen}"
 					InputGestureText="Ctrl+L"/>
+				<MenuItem
+					Header="{x:Static res:MainRes.EncodeDetailsMenuItem}"
+					Command="{Binding WindowManagerVM.OpenEncodeDetailsWindowCommand}"
+					IsCheckable="True" IsChecked="{Binding WindowManagerVM.EncodeDetailsWindowOpen}" />
 			</MenuItem>
 			<MenuItem Header="{x:Static res:MainRes.HelpMenu}">
 				<MenuItem Header="{x:Static res:MainRes.VidCoderHomepageMenuItem}" Command="{Binding OpenHomepageCommand}">
