--- a/VidCoder/App.xaml
+++ b/VidCoder/App.xaml
@@ -16,6 +16,7 @@
 		
 		<SolidColorBrush x:Key="{x:Static SystemColors.HighlightBrushKey}" Color="#B8E0F3"/>
 		<SolidColorBrush x:Key="{x:Static SystemColors.HighlightTextBrushKey}" Color="Black"/>
+		<SolidColorBrush x:Key="ProgressBarBrush" Color="#00C800" />
 
 		<Style x:Key="GrayOnDisabledControl" TargetType="Control">
 			<Style.Triggers>
