Subtitle dialog now disables the "Burn In" checkbox when it's either unavailable or it's the only option. It also disables the "Forced Only" when the subtitle type doesn't support the "Forced" flag. Updated HandBrake core to SVN 5872.
--HG--
branch : beta

--- a/VidCoder/View/SubtitleDialog.xaml
+++ b/VidCoder/View/SubtitleDialog.xaml
@@ -56,8 +56,9 @@
 		</DataTemplate>
 		<DataTemplate x:Key="ForcedTemplate">
 			<CheckBox 
-				IsChecked="{Binding Forced}" ToolTip="{x:Static res:CommonRes.ForcedSubtitleToolTip}"
+				IsChecked="{Binding ForcedOnly}" ToolTip="{x:Static res:CommonRes.ForcedSubtitleToolTip}"
 				Visibility="{Binding Selected, Converter={StaticResource VisibilityConverter}}"
+				IsEnabled="{Binding ForcedOnlyEnabled}"
 				Width="75" Height="22"
 				Style="{StaticResource CenteredCheckBox}"/>
 		</DataTemplate>
