--- a/VidCoder/View/OptionsDialog.xaml
+++ b/VidCoder/View/OptionsDialog.xaml
@@ -397,6 +397,10 @@
 								IsChecked="{Binding DeleteSourceFilesOnClearingCompleted}"
 								HorizontalAlignment="Left" Margin="0,6,0,0" VerticalAlignment="Center" />
 							<CheckBox
+								Content="{x:Static res:OptionsRes.PreserveModifyTimeFilesCheckBox}"
+								IsChecked="{Binding PreserveModifyTimeFiles}"
+								HorizontalAlignment="Left" Margin="0,6,0,0" VerticalAlignment="Center" />
+							<CheckBox
 								Content="{x:Static res:OptionsRes.ResumeEncodingOnRestartCheckBox}"
 								IsChecked="{Binding ResumeEncodingOnRestart}"
 								HorizontalAlignment="Left" Margin="0,6,0,0" VerticalAlignment="Center"/>
