Updated HandBrake core to SVN 6008. Added option to preserve the source folder structure when batch-encoding video files. DRC compatibility is now detected from the HandBrake library and is grayed out when used on a source that does not support it. (Currently non-AC3 sources)
--HG--
branch : beta

--- a/VidCoder/View/OptionsDialog.xaml
+++ b/VidCoder/View/OptionsDialog.xaml
@@ -203,6 +203,10 @@
 								Content="{x:Static res:OptionsRes.OutputToSourceDirCheckBox}"
 								Height="16" HorizontalAlignment="Left" Margin="0,6,0,0" VerticalAlignment="Top"
 								IsChecked="{Binding OutputToSourceDirectory}"/>
+							<CheckBox
+								Content="{x:Static res:OptionsRes.PreserveFolderStructureCheckBox}"
+								Height="16" HorizontalAlignment="Left" Margin="0,6,0,0" VerticalAlignment="Top"
+								IsChecked="{Binding PreserveFolderStructureInBatch}" ToolTip="{x:Static res:OptionsRes.PreserveFolderStructureToolTip}"/>
 						</StackPanel>
 
 						<!-- Naming format -->
