--- a/VidCoder/View/Panels/AudioPanel.xaml
+++ b/VidCoder/View/Panels/AudioPanel.xaml
@@ -313,7 +313,8 @@
 												<TextBlock
 													Style="{StaticResource AudioLabel}" Margin="10,0,2,0"
 													Text="{x:Static res:EncodingRes.DrcLabel}" ToolTipService.ShowDuration="20000"
-													Visibility="{Binding EncoderSettingsVisible, Converter={StaticResource VisibilityConverter}}">
+													Visibility="{Binding EncoderSettingsVisible, Converter={StaticResource VisibilityConverter}}"
+													Foreground="{Binding DrcBrush}">
 													<TextBlock.ToolTip>
 														<TextBlock Text="{x:Static res:EncodingRes.Audio_DrcToolTip}" Style="{StaticResource LongToolTip}" />
 													</TextBlock.ToolTip>
@@ -321,6 +322,7 @@
 												<controls:NumberBox
 													Width="42" Height="22" VerticalAlignment="Center" Margin="0,2,10,2"
 													Style="{StaticResource AudioControl}"
+													BoxForeground="{Binding DrcBrush}"
 													Number="{Binding Drc, Mode=TwoWay}"
 													AllowEmpty="False" Minimum="0" Maximum="4" Modulus="0.1"
 													Visibility="{Binding EncoderSettingsVisible, Converter={StaticResource VisibilityConverter}}"
