--- a/VidCoder/View/Panels/AdvancedPanel.xaml
+++ b/VidCoder/View/Panels/AdvancedPanel.xaml
@@ -12,6 +12,7 @@
 	<UserControl.Resources>
 		<Style x:Key="AdvancedLabel" TargetType="Label">
 			<Setter Property="HorizontalAlignment" Value="Right" />
+			<Setter Property="ToolTipService.ShowDuration" Value="20000" />
 		</Style>
 	</UserControl.Resources>
 	<Grid>
@@ -55,7 +56,11 @@
 
 				<Label
 					Content="{x:Static res:EncodingRes.ReferenceFramesLabel}" Grid.Row="0" Grid.Column="0"
-					Style="{StaticResource AdvancedLabel}" />
+					Style="{StaticResource AdvancedLabel}">
+					<Label.ToolTip>
+						<TextBlock Text="{x:Static res:EncodingRes.Advanced_ReferenceFramesToolTip}" Style="{StaticResource LongToolTip}" />
+					</Label.ToolTip>
+				</Label>
 				<ComboBox
 					Grid.Row="0" Grid.Column="1" Height="22"
 					ItemsSource="{x:Static vm:AdvancedChoices.ReferenceFrames}"
@@ -69,7 +74,11 @@
 
 				<Label
 					Content="{x:Static res:EncodingRes.MaxBFramesLabel}" Grid.Row="1" Grid.Column="0"
-					Style="{StaticResource AdvancedLabel}"/>
+					Style="{StaticResource AdvancedLabel}">
+					<Label.ToolTip>
+						<TextBlock Text="{x:Static res:EncodingRes.Advanced_BFramesToolTip}" Style="{StaticResource LongToolTip}" />
+					</Label.ToolTip>
+				</Label>
 				<ComboBox
 					Grid.Row="1" Grid.Column="1" Height="22"
 					ItemsSource="{x:Static vm:AdvancedChoices.BFrames}"
@@ -84,7 +93,11 @@
 
 				<Label
 					Content="{x:Static res:EncodingRes.CabacLabel}" Height="28" Grid.Row="4" Grid.Column="0"
-					Style="{StaticResource AdvancedLabel}"/>
+					Style="{StaticResource AdvancedLabel}">
+					<Label.ToolTip>
+						<TextBlock Text="{x:Static res:EncodingRes.Advanced_CabacToolTip}" Style="{StaticResource LongToolTip}" />
+					</Label.ToolTip>
+				</Label>
 				<CheckBox
 					Height="16" Grid.Row="4" Grid.Column="1"
 					IsChecked="{Binding CabacEntropyCoding}"
@@ -97,7 +110,11 @@
 				<Label
 					Content="{x:Static res:EncodingRes.EightByEightTransformLabel}" Height="28" Grid.Row="5" Grid.Column="0"
 					Visibility="{Binding EightByEightDctVisible, Converter={StaticResource VisibilityConverter}}"
-					Style="{StaticResource AdvancedLabel}"/>
+					Style="{StaticResource AdvancedLabel}">
+					<Label.ToolTip>
+						<TextBlock Text="{x:Static res:EncodingRes.Advanced_EightByEightDctToolTip}" Style="{StaticResource LongToolTip}" />
+					</Label.ToolTip>
+				</Label>
 				<CheckBox
 					Height="16" Grid.Row="5" Grid.Column="1"
 					IsChecked="{Binding EightByEightDct}"
@@ -110,7 +127,11 @@
 
 				<Label
 					Content="{x:Static res:EncodingRes.WeightedPFramesLabel}" Grid.Row="6" Grid.Column="0"
-					Style="{StaticResource AdvancedLabel}"/>
+					Style="{StaticResource AdvancedLabel}">
+					<Label.ToolTip>
+						<TextBlock Text="{x:Static res:EncodingRes.Advanced_WeightPToolTip}" Style="{StaticResource LongToolTip}" />
+					</Label.ToolTip>
+				</Label>
 				<CheckBox
 					Grid.Row="6" Grid.Column="1" VerticalAlignment="Center"
 					IsChecked="{Binding WeightedPFrames}"
@@ -123,7 +144,11 @@
 				<Label
 					Content="{x:Static res:EncodingRes.PyramidalBFramesLabel}" Grid.Row="7" Grid.Column="0"
 					Visibility="{Binding PyramidalBFramesVisible, Converter={StaticResource VisibilityConverter}}"
-					Style="{StaticResource AdvancedLabel}"/>
+					Style="{StaticResource AdvancedLabel}">
+					<Label.ToolTip>
+						<TextBlock Text="{x:Static res:EncodingRes.Advanced_PyramidalBFramesToolTip}" Style="{StaticResource LongToolTip}" />
+					</Label.ToolTip>
+				</Label>
 				<ComboBox
 					Grid.Row="7" Grid.Column="1" Height="22"
 					ItemsSource="{x:Static vm:AdvancedChoices.PyramidalBFrames}"
@@ -137,13 +162,19 @@
 				</ComboBox>
 			</Grid>
 
-			<TextBlock Height="21" HorizontalAlignment="Left" Margin="6,194,0,0" VerticalAlignment="Top" Text="{x:Static res:EncodingRes.Advanced_PsychovisualLabel}" Style="{StaticResource SectionHeader}" />
+			<TextBlock
+				Height="21" HorizontalAlignment="Left" Margin="6,194,0,0" VerticalAlignment="Top" Grid.Row="0" Grid.Column="0"
+				Text="{x:Static res:EncodingRes.Advanced_PsychovisualLabel}" Style="{StaticResource SectionHeader}" />
 			<StackPanel
 				Orientation="Horizontal"
-				Margin="29,208,0,0" HorizontalAlignment="Left" VerticalAlignment="Top">
+				Margin="29,208,0,0" HorizontalAlignment="Left" VerticalAlignment="Top" Grid.Row="0" Grid.Column="0">
 				<Label
 					Content="{x:Static res:EncodingRes.NoDctDecimateLabel}"
-					HorizontalAlignment="Left" VerticalAlignment="Center"/>
+					HorizontalAlignment="Left" VerticalAlignment="Center">
+					<Label.ToolTip>
+						<TextBlock Text="{x:Static res:EncodingRes.Advanced_NoDctDecimateToolTip}" Style="{StaticResource LongToolTip}" />
+					</Label.ToolTip>
+				</Label>
 				<CheckBox
 					VerticalAlignment="Center"  HorizontalAlignment="Left"
 					IsChecked="{Binding NoDctDecimate}"
@@ -156,10 +187,10 @@
 
 
 			<TextBlock 
-				Grid.Column="1"
+				Grid.Row="0" Grid.Column="1"
 				Height="21" HorizontalAlignment="Left" Margin="5,3,0,0" VerticalAlignment="Top" Text="{x:Static res:EncodingRes.Analysis}" Style="{StaticResource SectionHeader}" />
 			<Grid 
-				Grid.Column="1"
+				Grid.Row="0" Grid.Column="1"
 				HorizontalAlignment="Left" Margin="5,20,0,0" VerticalAlignment="Top">
 				<Grid.RowDefinitions>
 					<RowDefinition Height="Auto" />
@@ -176,7 +207,11 @@
 				<Label
 					Content="{x:Static res:EncodingRes.AdaptiveBFramesLabel}" Grid.Row="0" Grid.Column="0"
 					Visibility="{Binding BFramesOptionsVisible, Converter={StaticResource VisibilityConverter}}"
-					Style="{StaticResource AdvancedLabel}"/>
+					Style="{StaticResource AdvancedLabel}">
+					<Label.ToolTip>
+						<TextBlock Text="{x:Static res:EncodingRes.Advanced_AdaptiveBFramesToolTip}" Style="{StaticResource LongToolTip}" />
+					</Label.ToolTip>
+				</Label>
 				<ComboBox
 					Grid.Row="0" Grid.Column="1" Height="22"
 					ItemsSource="{x:Static vm:AdvancedChoices.AdaptiveBFrames}"
@@ -192,7 +227,11 @@
 				<Label
 					Content="{x:Static res:EncodingRes.AdaptiveDirectModeLabel}" Grid.Row="1" Grid.Column="0"
 					Visibility="{Binding BFramesOptionsVisible, Converter={StaticResource VisibilityConverter}}"
-					Style="{StaticResource AdvancedLabel}"/>
+					Style="{StaticResource AdvancedLabel}">
+					<Label.ToolTip>
+						<TextBlock Text="{x:Static res:EncodingRes.Advanced_AdaptiveDirectModeToolTip}" Style="{StaticResource LongToolTip}" />
+					</Label.ToolTip>
+				</Label>
 				<ComboBox
 					Grid.Row="1" Grid.Column="1" Height="22"
 					ItemsSource="{x:Static vm:AdvancedChoices.DirectPrediction}"
@@ -207,7 +246,11 @@
 
 				<Label
 					Content="{x:Static res:EncodingRes.MotionEstimationMethodLabel}" Grid.Row="2" Grid.Column="0"
-					Style="{StaticResource AdvancedLabel}"/>
+					Style="{StaticResource AdvancedLabel}">
+					<Label.ToolTip>
+						<TextBlock Text="{x:Static res:EncodingRes.Advanced_MotionEstimationMethodToolTip}" Style="{StaticResource LongToolTip}" />
+					</Label.ToolTip>
+				</Label>
 				<ComboBox
 					Grid.Row="2" Grid.Column="1" Height="22"
 					ItemsSource="{x:Static vm:AdvancedChoices.MotionEstimationMethod}"
@@ -221,7 +264,11 @@
 
 				<Label
 					Content="{x:Static res:EncodingRes.SubpixelMotionEstimationLabel}" Grid.Row="3" Grid.Column="0"
-					Style="{StaticResource AdvancedLabel}"/>
+					Style="{StaticResource AdvancedLabel}">
+					<Label.ToolTip>
+						<TextBlock Text="{x:Static res:EncodingRes.Advanced_SubpixelMotionEstimationToolTip}" Style="{StaticResource LongToolTip}" />
+					</Label.ToolTip>
+				</Label>
 				<ComboBox
 					Grid.Row="3" Grid.Column="1" Height="22"
 					ItemsSource="{x:Static vm:AdvancedChoices.SubpixelMotionEstimation}"
@@ -235,7 +282,11 @@
 
 				<Label
 					Content="{x:Static res:EncodingRes.MotionEstimationRangeLabel}" Grid.Row="4" Grid.Column="0"
-					Style="{StaticResource AdvancedLabel}"/>
+					Style="{StaticResource AdvancedLabel}">
+					<Label.ToolTip>
+						<TextBlock Text="{x:Static res:EncodingRes.Advanced_MotionEstimationRangeToolTip}" Style="{StaticResource LongToolTip}" />
+					</Label.ToolTip>
+				</Label>
 				<controls:NumberBox
 					Grid.Row="4" Grid.Column="1" Height="22"
 					Number="{Binding MotionEstimationRange, Mode=TwoWay}"
@@ -250,7 +301,7 @@
 
 
 			<Grid 
-				Grid.Column="1"
+				Grid.Row="0" Grid.Column="1"
 				Height="80" HorizontalAlignment="Left" Margin="5,152,0,0" VerticalAlignment="Top">
 				<Grid.RowDefinitions>
 					<RowDefinition Height="Auto" />
@@ -263,7 +314,11 @@
 				</Grid.ColumnDefinitions>
 				<Label
 					Content="{x:Static res:EncodingRes.AdaptiveQuantizationStrengthLabel}" Grid.Row="0" Grid.Column="0"
-					Style="{StaticResource AdvancedLabel}"/>
+					Style="{StaticResource AdvancedLabel}">
+					<Label.ToolTip>
+						<TextBlock Text="{x:Static res:EncodingRes.Advanced_AdaptiveQuantizationStrengthToolTip}" Style="{StaticResource LongToolTip}" />
+					</Label.ToolTip>
+				</Label>
 				<Slider
 					Grid.Row="0" Grid.Column="1"
 					Minimum="0.0" Maximum="2.0" TickPlacement="BottomRight" TickFrequency="0.1" SmallChange="0.1" LargeChange="0.2" IsSnapToTickEnabled="True"
@@ -276,7 +331,11 @@
 
 				<Label
 					Content="{x:Static res:EncodingRes.PsychoVisualRateDistortionLabel}" Grid.Row="1" Grid.Column="0"
-					Style="{StaticResource AdvancedLabel}"/>
+					Style="{StaticResource AdvancedLabel}">
+					<Label.ToolTip>
+						<TextBlock Text="{x:Static res:EncodingRes.Advanced_PsychovisualRateDistortionToolTip}" Style="{StaticResource LongToolTip}" />
+					</Label.ToolTip>
+				</Label>
 				<Slider
 					Grid.Row="1" Grid.Column="1"
 					Minimum="0.0" Maximum="2.0" TickPlacement="BottomRight" TickFrequency="0.1" SmallChange="0.1" LargeChange="0.2" IsSnapToTickEnabled="True"
@@ -290,7 +349,11 @@
 				<Label
 					Content="{x:Static res:EncodingRes.PsychovisualTrellisLabel}" Grid.Row="2" Grid.Column="0"
 					Visibility="{Binding PsychovisualTrellisVisible, Converter={StaticResource VisibilityConverter}}"
-					Style="{StaticResource AdvancedLabel}"/>
+					Style="{StaticResource AdvancedLabel}">
+					<Label.ToolTip>
+						<TextBlock Text="{x:Static res:EncodingRes.Advanced_PsychovisualTrellisToolTip}" Style="{StaticResource LongToolTip}" />
+					</Label.ToolTip>
+				</Label>
 				<Slider
 					Grid.Row="2" Grid.Column="1"
 					Minimum="0.0" Maximum="1.0" TickPlacement="BottomRight" TickFrequency="0.05" SmallChange="0.05" LargeChange="0.2" IsSnapToTickEnabled="True"
@@ -303,7 +366,7 @@
 				</Slider>
 			</Grid>
 			<Grid
-				Grid.Column="1"
+				Grid.Row="0" Grid.Column="1"
 				VerticalAlignment="Top" HorizontalAlignment="Right" Margin="0,230,0,0">
 				<Grid.RowDefinitions>
 					<RowDefinition />
@@ -316,7 +379,11 @@
 				</Grid.ColumnDefinitions>
 				<Label
 					Grid.Row="0" Grid.Column="0"
-					Content="{x:Static res:EncodingRes.DeblockingLabel}" Height="28" HorizontalAlignment="Right" VerticalAlignment="Top" />
+					Content="{x:Static res:EncodingRes.DeblockingLabel}" Height="28" HorizontalAlignment="Right" VerticalAlignment="Top">
+					<Label.ToolTip>
+						<TextBlock Text="{x:Static res:EncodingRes.Advanced_DeblockingToolTip}" Style="{StaticResource LongToolTip}" />
+					</Label.ToolTip>
+				</Label>
 				<ComboBox
 					Grid.Row="0" Grid.Column="1"
 					Height="23" HorizontalAlignment="Right" VerticalAlignment="Center" Width="83"
@@ -344,7 +411,11 @@
 					Orientation="Horizontal"
 					Grid.Row="0" Grid.Column="2" Margin="10,0,0,0">
 					<Label 
-						Content="{x:Static res:EncodingRes.PartitionTypeLabel}" Height="28" HorizontalAlignment="Right" VerticalAlignment="Top" />
+						Content="{x:Static res:EncodingRes.PartitionTypeLabel}" Height="28" HorizontalAlignment="Right" VerticalAlignment="Top">
+						<Label.ToolTip>
+							<TextBlock Text="{x:Static res:EncodingRes.Advanced_AnalysisToolTip}" Style="{StaticResource LongToolTip}" />
+						</Label.ToolTip>
+					</Label>
 					<ComboBox
 						Height="23" HorizontalAlignment="Right" VerticalAlignment="Center" Width="106"
 						ItemsSource="{x:Static vm:AdvancedChoices.Analysis}"
@@ -362,7 +433,11 @@
 					Orientation="Horizontal"
 					Grid.Row="1" Grid.Column="2" Margin="10,0,0,0">
 					<Label
-						Content="{x:Static res:EncodingRes.TrellisLabel}" Height="28" HorizontalAlignment="Right" VerticalAlignment="Top" />
+						Content="{x:Static res:EncodingRes.TrellisLabel}" Height="28" HorizontalAlignment="Right" VerticalAlignment="Top">
+						<Label.ToolTip>
+							<TextBlock Text="{x:Static res:EncodingRes.Advanced_TrellisToolTip}" Style="{StaticResource LongToolTip}" />
+						</Label.ToolTip>
+					</Label>
 					<ComboBox
 						Height="23" HorizontalAlignment="Right" VerticalAlignment="Center" Width="141"
 						ItemsSource="{x:Static vm:AdvancedChoices.Trellis}"
@@ -376,7 +451,8 @@
 				</StackPanel>
 			</Grid>
 
-			<TextBlock 
+			<TextBlock
+				Grid.Row="0" Grid.Column="0"
 				Text="{x:Static res:EncodingRes.OptionsString}" HorizontalAlignment="Left" Margin="7,267,0,0" VerticalAlignment="Top" />
 			<TextBox
 				Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2"
