Updated HandBrake core to SVN 6254. Added NL-Means denoiser.
--HG--
branch : beta

--- a/VidCoder/View/Panels/AudioEncodingPanel.xaml
+++ b/VidCoder/View/Panels/AudioEncodingPanel.xaml
@@ -468,7 +468,9 @@
 						Content="{x:Static res:EncodingRes.PassthroughIfPossibleCheckBox}"
 						IsChecked="{Binding PassthroughIfPossible}"
 						Style="{StaticResource AudioLabelLeft}"
-						ToolTipService.ShowDuration="20000">
+						ToolTipService.ShowDuration="20000"
+						Visibility="{Binding PassthroughIfPossibleVisible,
+					                               Converter={StaticResource VisibilityConverter}}">
 						<CheckBox.ToolTip>
 							<TextBlock Style="{StaticResource LongToolTip}" Text="{x:Static res:EncodingRes.PassthroughIfPossibleToolTip}" />
 						</CheckBox.ToolTip>
